# DoAn

./: .gitignore
Kra/: Cargo.toml
Kra/src/: main.rs
S3/: Cargo.toml
S3/src/: main.rs  monitor.rs  pool.rs  stats.rs
Server/: .gitignore  nodemon.json  package-lock.json  package.json
Server/src/: main.ts
