[package]
name = "S3"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["full", "macros"] }
zip = "0.6"
tokio-util = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
sysinfo = "0.30"
crossterm = "0.27"
tower-http = { version = "0.3", features = ["full"] }
dotenvy = "0.15"
